fix profile header align

--- a/ProjekAkhir/assets/styles/style.css
+++ b/ProjekAkhir/assets/styles/style.css
@@ -398,6 +398,10 @@ footer {
     color: #263179;
   }
 
+  .profile-header p {
+    text-align: center;
+  }
+
   footer {
     position: relative;
     bottom: 0;
